# data-validator-app

./: .gitignore  CONTRIBUTING.md  DEVELOPMENT.md  PROFILE_README_SECTION.md  README.md  SAMPLE_DATA_GUIDE.md  pyproject.toml  requirements.txt  run_cli.bat  run_web.bat  start_server.bat  start_server.sh
.github/workflows/: ci.yml
tests/: __init__.py  test_cli.py  test_csv_io.py  test_validation.py
validator/: __init__.py  cli.py  config.py  csv_io.py  discovery.py  exit_codes.py  models.py  runner.py  validation.py  web.py
validator/templates/: dashboard.html
